--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -715,7 +715,7 @@ a.no-underline { border-bottom: none; text-decoration: none; }
   padding: .5rem 0 0 1.1rem;
 }
 .related ul li { display:inline-block; width: 31%; padding-right: 0; font-size: .9rem; }
-.related ul:after { content: " "; display: block; height: 10px;  width: 100%; }
+.related ul:after { content: " "; height: .5rem; display: block; clear: both; } // a clearfix to show background
 .related ul li a { color: #fff; border-bottom:none; }
 .related ul li a:hover { border-bottom: 1px dotted #fff; }
 .related ul li a:after { content: " >"; }
