--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -656,7 +656,16 @@ a:active {
     margin-right: 1rem;
   }
 
-  blockquote.lead { margin-left: 1rem; }
+  blockquote.lead { margin-left: 1rem; border-left-color: rgba(0,0,0,0); border-right-color: rgba(0,0,0,0);}
+  blockquote.lead.quote:before {
+    content: "“";
+    position: relative;
+    top: -1.5rem;
+    left: -1.5rem;
+    font-size: 3rem;
+    display: block;
+    height: 0px;
+  }
 
   /* bigger first line for some blockquotes */
   blockquote.drop-quote::first-line {
