Update embl map

--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -238,7 +238,7 @@ a:active {
   /* EMBL Dropdwon styles */
   #embl-dropdown {
     background-color: #007c82;
-    background-image: url(images/map.png);
+    background-image: url('../images/map.png');
     background-position: 100% 100%;
     background-repeat: no-repeat;
     color: #fff;
