--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -256,7 +256,7 @@ header .masthead {
 /* EMBL Dropdwon styles */
 #embl-dropdown {
   background-color: #007c82;
-  background-image: url(images/map.png);
+  background-image: url("../images/map.png");
   background-position: 100% 100%;
   background-repeat: no-repeat;
   color: #fff;
