--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -83,4 +83,7 @@ body.is-reveal-open #status-messages.static .alert-box {
 }
 
 /* Tinymce reset */
-body#tinymce { font-size: 100%; margin: 0 1em; }
+
+/* tinyMce WYSIWYG fixes */
+body.mceContentBody,
+body#tinymce { font-size: 1rem; margin: 0 1em; }
