Update labels to not look like tags

--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -34,6 +34,12 @@ $body-font-color: $ebi-colour-dark;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-font-family-serif: 'EB Garamond', 'georgia', serif;
 
+// Label tweaks
+$label-background: $ebi-colour-white;
+$label-color: $primary-color;
+$label-font-size: 0.8rem;
+$label-padding: 0.33333rem 0;
+
 // These don't do anything yet...
 $global-margin: 1rem;
 $global-padding: 1rem;
