--- a/css/foundation/_settings.scss
+++ b/css/foundation/_settings.scss
@@ -421,10 +421,10 @@ $input-radius: $global-radius;
 // 20. Label
 // ---------
 
-$label-background: $primary-color;
-$label-color: foreground($label-background);
-$label-font-size: 0.8rem;
-$label-padding: 0.33333rem 0.5rem;
+// $label-background: $primary-color;
+// $label-color: foreground($label-background);
+// $label-font-size: 0.8rem;
+// $label-padding: 0.33333rem 0.5rem;
 $label-radius: $global-radius;
 
 // 21. Media Object
