--- a/css/theme-ebi-industry.css
+++ b/css/theme-ebi-industry.css
@@ -22,10 +22,9 @@ a.special { background-color: #7cd17c; }
 a.label,
 .label,
 .button,
-.button.primary {       
-  background-color: rgb(0,134,180);
-  color: #f8f8f8;
-}   
+.button.primary {
+  color: rgb(0,134,180);
+}
 .button.primary:hover,
 .button.primary:focus,
 .button:hover,
