--- a/css/theme-ebi-services-about.css
+++ b/css/theme-ebi-services-about.css
@@ -23,8 +23,7 @@ a.label,
 .label,
 .button,
 .button.primary {
-  background-color: rgb(56,145,152);
-  color: #f8f8f8;
+  color: rgb(56,145,152);
 }
 .button.primary:hover,
 .button.primary:focus,
