--- a/css/theme-pdbe-green.css
+++ b/css/theme-pdbe-green.css
@@ -22,9 +22,8 @@ a.special { background-color: #7cd17c; }
 a.label,
 .label,
 .button,
-.button.primary {       
-  background-color: rgb(116,179,96);
-  color: #f8f8f8;
+.button.primary {
+  color: rgb(116,179,96);
 }   
 .button.primary:hover,
 .button.primary:focus,
