--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -110,28 +110,28 @@ a:active {
 .secondary-background, a.secondary-background, .button.secondary-background {
   background: #666; }
 
-.ebi-color, a.ebi-color, a:hover.ebi-color {
+.ebi-color, .label.ebi-color, a.ebi-color, a:hover.ebi-color {
   color: #007c82; }
 
-.services-color, a.services-color, a:hover.services-color {
+.services-color, .label.services-color, a.services-color, a:hover.services-color {
   color: #389198; }
 
-.research-color, a.research-color, a:hover.research-color {
+.research-color, .label.research-color, a.research-color, a:hover.research-color {
   color: #6dab49; }
 
-.training-color, a.training-color, a:hover.training-color {
+.training-color, .label.training-color, a.training-color, a:hover.training-color {
   color: #e9b400; }
 
-.industry-color, a.industry-color, a:hover.industry-color {
+.industry-color, .label.industry-color, a.industry-color, a:hover.industry-color {
   color: #0086b4; }
 
-.elixir-color, a.elixir-color, a:hover.elixir-color {
+.elixir-color, .label.elixir-color, a.elixir-color, a:hover.elixir-color {
   color: #fb6a2a; }
 
-.white-color, a.white-color, a:hover.white-color {
+.white-color, .label.white-color, a.white-color, a:hover.white-color {
   color: white; }
 
-.secondary-color, a.secondary-color, a:hover.secondary-color {
+.secondary-color, .label.secondary-color, a.secondary-color, a:hover.secondary-color {
   color: #666; }
 
 /*
