--- a/css/foundation/_settings.scss
+++ b/css/foundation/_settings.scss
@@ -423,7 +423,7 @@ $input-radius: $global-radius;
 
 // $label-background: $primary-color;
 // $label-color: foreground($label-background);
-// $label-font-size: 0.8rem;
+$label-font-size: 0.8rem;
 // $label-padding: 0.33333rem 0.5rem;
 $label-radius: $global-radius;
 
