--- a/css/theme-ebi-industry.css
+++ b/css/theme-ebi-industry.css
@@ -6,6 +6,8 @@ a {
   color: #222;
 }
 
+a.label,
+.label,
 a:hover,
 a:focus,
 a:active {
@@ -19,11 +21,10 @@ h3 { color: #444444; }
 a.special { background-color: #7cd17c; }
 
 .menu .active > a,
-a.label,
-.label,
+.tag,
 .button,
 .button.primary {
-  color: rgb(0,134,180);
+  background-color: rgb(0,134,180);
 }
 .button.primary:hover,
 .button.primary:focus,
