--- a/css/theme-ebi-training.css
+++ b/css/theme-ebi-training.css
@@ -6,6 +6,8 @@ a {
   color: #222;
 }
 
+a.label,
+.label,
 a:hover,
 a:focus,
 a:active {
@@ -19,12 +21,11 @@ h3 { color: #444444; }
 a.special { background-color: #7cd17c; }
 
 .menu .active > a,
-a.label,
-.label,
+.tag,
 .button,
 .button.primary {
-  color: rgb(233,180,0);
-}   
+  background-color: rgb(233,180,0);
+}
 .button.primary:hover,
 .button.primary:focus,
 .button:hover,
