Improve small screen padding

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -748,7 +748,9 @@ blockquote.drop-quote::first-line {
   font-size: 1.6rem; }
 
 /* tweaks to foundation's mobile settings */
-@media screen and (max-width: 40em) {
+@media screen and (max-width: 75rem) {
+  body ul.dropdown.menu.float-left {
+    padding-left: .5rem; }
   body #content {
     padding-right: .5rem;
     padding-left: .5rem; }
