--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -107,3 +107,6 @@ body div.caption-inner {
 /* tinyMce WYSIWYG fixes */
 body.mceContentBody,
 body#tinymce { font-size: 1rem; margin: 0 1em; overflow-y: scroll !important; }
+
+/* For some drupal views we need to absue li items as columns */
+li.columns { list-style-type: none; }
